[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandablocks-ioc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Create an IOC from a PandA"
dependencies = [
    "setuptools>=64",
    "numpy<2",    # until https://github.com/mdavidsaver/p4p/issues/145 is fixed
    "click",
    "h5py",
    "softioc>=4.4.0",
    "pandablocks~=0.10.0",
    "pvi~=0.7.0",
    "typing-extensions;python_version<'3.8'",
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "aioca",
    "black",
    "mock",
    "mypy",
    "copier",
    "myst-parser",
    "pipdeptree",
    "pre-commit",
    "p4p",
    "pydata-sphinx-theme>=0.12",
    "pytest>=8.2.0",
    "pytest-asyncio~=0.21.2",    # https://github.com/PandABlocks/PandABlocks-ioc/issues/84
    "pytest-cov",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-direct",
    "types-mock",
]

[project.scripts]
pandablocks-ioc = "pandablocks_ioc.__main__:cli"

[project.urls]
GitHub = "https://github.com/PandABlocks/PandABlocks-ioc"

[[project.authors]]
email = "tom.cobb@diamond.ac.uk"
name = "Tom Cobb"
[[project.authors]] # Further authors may be added by duplicating this section
email = "alex.wells@diamond.ac.uk"
name = "Alex Wells"


[tool.setuptools_scm]
write_to = "src/pandablocks_ioc/_version.py"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
# First ignore is due to p4p staticly linking an old numpy version and us installing
# Next is something that needs to be fixed in PandABlocks-client asyncio.py's write_and_drain function
# which triggers a deprecation warning on Python 3.9+. See https://github.com/PandABlocks/PandABlocks-client/issues/47.
# a more recent version with a different C API. See https://github.com/mdavidsaver/p4p/issues/102.
filterwarnings = """
    error
    ignore:numpy.ufunc size changed
    ignore:The explicit passing of coroutine objects to asyncio.wait()
"""
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
data_file = "/tmp/pandablocks_ioc.coverage"
branch = true
omit = ["tests/*"]

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,type-checking,tests,docs}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
    sphinx-autobuild
commands =
    pre-commit: pre-commit run --all-files {posargs}
    type-checking: mypy src tests {posargs}
    tests: pytest --cov=pandablocks_ioc --cov-report term --cov-report xml:cov.xml {posargs}
    docs: sphinx-{posargs:build -EW --keep-going} -T docs build/html
"""

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
