[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pandablocks-ioc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Create an IOC from a PandA"
dependencies = [
  "setuptools>=64",
  "numpy<2",                                # until https://github.com/mdavidsaver/p4p/issues/145 is fixed
  "click",
  "h5py",
  "softioc>=4.4.0",
  "pandablocks~=0.10.0",
  "pvi~=0.10.0",
  "typing-extensions;python_version<'3.8'",
] # Add project dependencies here, e.g. ["click", "numpy"]

dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "aioca",
  "black",
  "mock",
  "copier",
  "mypy",
  "myst-parser",
  "pipdeptree",
  "pre-commit",
  "p4p",
  "pydata-sphinx-theme>=0.12",
  "pytest>=8.2.0",
  "pytest-asyncio~=0.21.2",    # https://github.com/PandABlocks/PandABlocks-ioc/issues/84
  "pytest-cov",
  "ruff",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-design",
  "tox-uv",
  "types-mock",
]

[project.scripts]
pandablocks-ioc = "pandablocks_ioc.__main__:cli"

[project.urls]
GitHub = "https://github.com/PandABlocks/PandABlocks-ioc"

[[project.authors]]
email = "tom.cobb@diamond.ac.uk"
name = "Tom Cobb"
[[project.authors]] # Further authors may be added by duplicating this section
email = "alex.wells@diamond.ac.uk"
name = "Alex Wells"

[tool.setuptools_scm]
version_file = "src/pandablocks_ioc/_version.py"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
# First ignore is due to p4p staticly linking an old numpy version and us installing
# Next is something that needs to be fixed in PandABlocks-client asyncio.py's write_and_drain function
# which triggers a deprecation warning on Python 3.9+. See https://github.com/PandABlocks/PandABlocks-client/issues/47.
# a more recent version with a different C API. See https://github.com/mdavidsaver/p4p/issues/102.
filterwarnings = """
    error
    ignore:numpy.ufunc size changed
    ignore:The explicit passing of coroutine objects to asyncio.wait()
    ignore::DeprecationWarning:multiprocessing.reduction

"""
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
patch = ["subprocess"]
data_file = "/tmp/pandablocks_ioc.coverage"
branch = true
omit = ["tests/*"]

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[tool.tox]
skipsdist = true
# envs to runs automatically with tox -p
env_list = ["pre-commit", "type-checking", "tests", "docs"]

[tool.tox.env_run_base]
# Pass all environment variables to the test environments
passenv = ["*"]

[tool.tox.env.pre-commit]
description = "Run pre-commit on all files"
commands = [
    [
        "pre-commit",
        "run",
        "--all-files",
        "--show-diff-on-failure",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.type-checking]
description = "Run mypy"
commands = [
    [
        "mypy",
        "src",
        "tests",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.tests]
description = "Run tests with coverage"
commands = [
    [
        "pytest",
        "--cov=pandablocks_ioc",
        "--cov-report",
        "term",
        "--cov-report",
        "xml:cov.xml",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs]
description = "Run docs build with clean environment"
commands = [
    [
        "sphinx-build",
        "--fresh-env",
        "--show-traceback",
        "--fail-on-warning",
        "--keep-going",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs-autobuild]
description = "Run docs with autobuild on change"
commands = [
    [
        "sphinx-autobuild",
        "--show-traceback",
        "--watch",
        "README.md",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",  # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",   # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",   # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF", # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
]

[tool.ruff.lint.per-file-ignores]
# We allow private member access for now.
"tests/**/*" = ["SLF001"]
"src/**/*" = ["SLF001"]
"**" = ["UP007", "UP038"]
